examples/type_system/failing/193_unreachable_pattern_arm_w202.flx
// W202: Unreachable pattern arms are detected at compile time.
// An arm is unreachable when a preceding unguarded arm provably covers
// the same pattern space (structural subsumption).

fn dup_literal(n) {
    match n {
        1 -> "first",
        1 -> "duplicate",
        _ -> "other"
    }
}

fn dup_none(x) {
    match x {
        None -> 0,
        None -> 99,
        Some(v) -> v
    }
}

fn subsumed_some(x) {
    match x {
        Some(_) -> 1,
        Some(42) -> 2,
        None -> 0
    }
}

fn main() {
    None
}
